# reproducible-ml-experiments

./: README.md  pyproject.toml
configs/: baseline.yaml  sweep.yaml
results/: runs.csv
scripts/: run.sh
src/: data.py  eval.py  model.py  train.py
src/utils/: logging.py  seed.py
