[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reproducible-ml-experiments"
version = "0.1.0"
description = "A lightweight, config-driven template for structured and reproducible machine learning experiments."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]

dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.0",
  "black>=23.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
